# cuda-textify

./: CMakeLists.txt  dummy.cpp  input.txt  main.cpp
lib/: cuda_helpers.cpp  cuda_helpers.h  textify.cpp  textify.cu  textify.h
